--- a/ShellTest/MVVM/Pages/Zona/NewPage1.xaml
+++ b/ShellTest/MVVM/Pages/Zona/NewPage1.xaml
@@ -11,7 +11,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         
-        <Button Text="Enable"
+        <Button Text="Enabled"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" 
                 HeightRequest="100"
